fix: controllers melhorados